@@ -23,15 +23,16 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import org.flowable.engine.common.api.FlowableIllegalArgumentException;
-import org.flowable.engine.common.impl.history.HistoryLevel;
+import org.flowable.common.engine.api.FlowableIllegalArgumentException;
+import org.flowable.common.engine.impl.history.HistoryLevel;
 import org.flowable.engine.history.HistoricProcessInstance;
 import org.flowable.engine.impl.test.HistoryTestHelper;
 import org.flowable.engine.impl.test.PluggableFlowableTestCase;
 import org.flowable.engine.runtime.ProcessInstance;
 import org.flowable.engine.runtime.ProcessInstanceBuilder;
 import org.flowable.engine.test.Deployment;
-import org.flowable.identitylink.service.history.HistoricIdentityLink;
+import org.flowable.identitylink.api.history.HistoricIdentityLink;
+import org.junit.jupiter.api.Test;
 
 /**
  * @author Tom Baeyens
@@ -39,6 +40,7 @@ import org.flowable.identitylink.service.history.HistoricIdentityLink;
  */
 public class HistoricProcessInstanceTest extends PluggableFlowableTestCase {
 
+    @Test
     @Deployment(resources = { "org/flowable/engine/test/history/oneTaskProcess.bpmn20.xml" })
     public void testHistoricDataCreatedForProcessExecution() {
 
@@ -55,7 +57,7 @@ public class HistoricProcessInstanceTest extends PluggableFlowableTestCase {
         processEngineConfiguration.getClock().setCurrentTime(noon);
         final ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("oneTaskProcess", "myBusinessKey");
         
-        waitForHistoryJobExecutorToProcessAllJobs(5000, 100);
+        waitForHistoryJobExecutorToProcessAllJobs(7000, 100);
 
         assertEquals(1, historyService.createHistoricProcessInstanceQuery().unfinished().count());
         assertEquals(0, historyService.createHistoricProcessInstanceQuery().finished().count());
@@ -69,7 +71,7 @@ public class HistoricProcessInstanceTest extends PluggableFlowableTestCase {
         assertNull(historicProcessInstance.getEndTime());
         assertNull(historicProcessInstance.getDurationInMillis());
 
-        List<org.flowable.task.service.Task> tasks = taskService.createTaskQuery().processInstanceId(processInstance.getId()).list();
+        List<org.flowable.task.api.Task> tasks = taskService.createTaskQuery().processInstanceId(processInstance.getId()).list();
 
         assertEquals(1, tasks.size());
 
@@ -79,7 +81,7 @@ public class HistoricProcessInstanceTest extends PluggableFlowableTestCase {
         processEngineConfiguration.getClock().setCurrentTime(twentyFiveSecsAfterNoon);
         taskService.complete(tasks.get(0).getId());
         
-        waitForHistoryJobExecutorToProcessAllJobs(5000, 100);
+        waitForHistoryJobExecutorToProcessAllJobs(7000, 100);
 
         historicProcessInstance = historyService.createHistoricProcessInstanceQuery().processInstanceId(processInstance.getId()).singleResult();
 
@@ -88,12 +90,13 @@ public class HistoricProcessInstanceTest extends PluggableFlowableTestCase {
         assertEquals(processInstance.getProcessDefinitionId(), historicProcessInstance.getProcessDefinitionId());
         assertEquals(noon, historicProcessInstance.getStartTime());
         assertEquals(twentyFiveSecsAfterNoon, historicProcessInstance.getEndTime());
-        assertEquals(new Long(25 * 1000), historicProcessInstance.getDurationInMillis());
+        assertEquals(Long.valueOf(25 * 1000), historicProcessInstance.getDurationInMillis());
 
         assertEquals(0, historyService.createHistoricProcessInstanceQuery().unfinished().count());
         assertEquals(1, historyService.createHistoricProcessInstanceQuery().finished().count());
     }
 
+    @Test
     @Deployment(resources = { "org/flowable/engine/test/history/oneTaskProcess.bpmn20.xml" })
     public void testDeleteProcessInstanceHistoryCreated() {
         ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("oneTaskProcess");
@@ -102,13 +105,14 @@ public class HistoricProcessInstanceTest extends PluggableFlowableTestCase {
         // delete process instance should not delete the history
         runtimeService.deleteProcessInstance(processInstance.getId(), "cancel");
         
-        waitForHistoryJobExecutorToProcessAllJobs(5000, 100);
+        waitForHistoryJobExecutorToProcessAllJobs(7000, 100);
         
         HistoricProcessInstance historicProcessInstance = historyService.createHistoricProcessInstanceQuery().processInstanceId(processInstance.getId()).singleResult();
         assertNotNull(historicProcessInstance.getEndTime());
     }
 
     /*
+     * @Test
      * @Deployment(resources = {"org/flowable/engine/test/history/oneTaskProcess.bpmn20.xml"}) public void testHistoricProcessInstanceVariables() { Map<String,Object> vars = new
      * HashMap<String,Object>(); vars.put("foo", "bar"); vars.put("baz", "boo");
      * 
@@ -119,6 +123,7 @@ public class HistoricProcessInstanceTest extends PluggableFlowableTestCase {
      * "boo").count()); }
      */
 
+    @Test
     @Deployment(resources = { "org/flowable/engine/test/history/oneTaskProcess.bpmn20.xml" })
     public void testHistoricProcessInstanceQuery() {
         Calendar startTime = Calendar.getInstance();
@@ -132,7 +137,7 @@ public class HistoricProcessInstanceTest extends PluggableFlowableTestCase {
         Calendar hourFromNow = Calendar.getInstance();
         hourFromNow.add(Calendar.HOUR_OF_DAY, 1);
         
-        waitForHistoryJobExecutorToProcessAllJobs(5000, 100);
+        waitForHistoryJobExecutorToProcessAllJobs(7000, 100);
 
         // Name and name like
         assertEquals("The name", historyService.createHistoricProcessInstanceQuery().processInstanceName("The name").singleResult().getName());
@@ -145,7 +150,7 @@ public class HistoricProcessInstanceTest extends PluggableFlowableTestCase {
         // Query after update name
         runtimeService.setProcessInstanceName(processInstance.getId(), "New name");
         
-        waitForHistoryJobExecutorToProcessAllJobs(5000, 100);
+        waitForHistoryJobExecutorToProcessAllJobs(7000, 100);
         
         assertEquals("New name", historyService.createHistoricProcessInstanceQuery().processInstanceName("New name").singleResult().getName());
         assertEquals(1, historyService.createHistoricProcessInstanceQuery().processInstanceName("New name").count());
@@ -185,7 +190,7 @@ public class HistoricProcessInstanceTest extends PluggableFlowableTestCase {
         // After finishing process
         taskService.complete(taskService.createTaskQuery().processInstanceId(processInstance.getId()).singleResult().getId());
         
-        waitForHistoryJobExecutorToProcessAllJobs(5000, 100);
+        waitForHistoryJobExecutorToProcessAllJobs(7000, 100);
         
         assertEquals(1, historyService.createHistoricProcessInstanceQuery().finished().count());
         assertEquals(0, historyService.createHistoricProcessInstanceQuery().finishedBefore(hourAgo.getTime()).count());
@@ -198,6 +203,7 @@ public class HistoricProcessInstanceTest extends PluggableFlowableTestCase {
         assertEquals(0, historyService.createHistoricProcessInstanceQuery().involvedUser("gonzo").count());
     }
 
+    @Test
     @Deployment(resources = { "org/flowable/engine/test/history/oneTaskProcess.bpmn20.xml" })
     public void testHistoricProcessInstanceOrQuery() {
         Calendar startTime = Calendar.getInstance();
@@ -211,7 +217,7 @@ public class HistoricProcessInstanceTest extends PluggableFlowableTestCase {
         Calendar hourFromNow = Calendar.getInstance();
         hourFromNow.add(Calendar.HOUR_OF_DAY, 1);
         
-        waitForHistoryJobExecutorToProcessAllJobs(5000, 100);
+        waitForHistoryJobExecutorToProcessAllJobs(7000, 100);
 
         // Name and name like
         assertEquals("The name", historyService.createHistoricProcessInstanceQuery().or().processInstanceName("The name").processDefinitionId("undefined").endOr().singleResult().getName());
@@ -246,7 +252,7 @@ public class HistoricProcessInstanceTest extends PluggableFlowableTestCase {
         // Query after update name
         runtimeService.setProcessInstanceName(processInstance.getId(), "New name");
         
-        waitForHistoryJobExecutorToProcessAllJobs(5000, 100);
+        waitForHistoryJobExecutorToProcessAllJobs(7000, 100);
         
         assertEquals("New name", historyService.createHistoricProcessInstanceQuery().or().processInstanceName("New name").processDefinitionId("undefined").endOr().singleResult().getName());
         assertEquals(1, historyService.createHistoricProcessInstanceQuery().or().processInstanceName("New name").processDefinitionId("undefined").endOr().count());
@@ -273,7 +279,8 @@ public class HistoricProcessInstanceTest extends PluggableFlowableTestCase {
         assertEquals(0, historyService.createHistoricProcessInstanceQuery().or().processDefinitionId("undefined").processDefinitionKeyIn(Arrays.asList("undefined1", "undefined2")).endOr().count());
         assertEquals(1, historyService.createHistoricProcessInstanceQuery().or().processDefinitionKey("oneTaskProcess").processDefinitionId("undefined").endOr().count());
         assertEquals(1, historyService.createHistoricProcessInstanceQuery().or().processInstanceBusinessKey("businessKey123").processDefinitionId("undefined").endOr().count());
-
+        assertEquals(1, historyService.createHistoricProcessInstanceQuery().or().processInstanceBusinessKeyLike("b%123").processDefinitionId("undefined").endOr().count());
+        
         List<String> excludeIds = new ArrayList<>();
         excludeIds.add("unexistingProcessDefinition");
 
@@ -285,7 +292,7 @@ public class HistoricProcessInstanceTest extends PluggableFlowableTestCase {
         // After finishing process
         taskService.complete(taskService.createTaskQuery().processInstanceId(processInstance.getId()).singleResult().getId());
         
-        waitForHistoryJobExecutorToProcessAllJobs(5000, 100);
+        waitForHistoryJobExecutorToProcessAllJobs(7000, 100);
         
         assertEquals(1, historyService.createHistoricProcessInstanceQuery().or().finished().processDefinitionId("undefined").endOr().count());
         assertEquals(0, historyService.createHistoricProcessInstanceQuery().or().finishedBefore(hourAgo.getTime()).processDefinitionId("undefined").endOr().count());
@@ -298,11 +305,12 @@ public class HistoricProcessInstanceTest extends PluggableFlowableTestCase {
         assertEquals(0, historyService.createHistoricProcessInstanceQuery().or().involvedUser("gonzo").processDefinitionId("undefined").endOr().count());
     }
 
+    @Test
     @Deployment(resources = { "org/flowable/engine/test/history/oneTaskProcess.bpmn20.xml" })
     public void testHistoricProcessInstanceSorting() {
         ProcessInstance processInstance1 = runtimeService.startProcessInstanceByKey("oneTaskProcess");
         
-        waitForHistoryJobExecutorToProcessAllJobs(5000, 100);
+        waitForHistoryJobExecutorToProcessAllJobs(7000, 100);
 
         assertEquals(1, historyService.createHistoricProcessInstanceQuery().orderByProcessInstanceId().asc().list().size());
         assertEquals(1, historyService.createHistoricProcessInstanceQuery().orderByProcessInstanceStartTime().asc().list().size());
@@ -335,16 +343,16 @@ public class HistoricProcessInstanceTest extends PluggableFlowableTestCase {
         ProcessInstance processInstance2 = runtimeService.startProcessInstanceByKey("oneTaskProcess");
 
         // First complete process instance 2
-        for (org.flowable.task.service.Task task : taskService.createTaskQuery().processInstanceId(processInstance2.getId()).list()) {
+        for (org.flowable.task.api.Task task : taskService.createTaskQuery().processInstanceId(processInstance2.getId()).list()) {
             taskService.complete(task.getId());
         }
 
         // Then process instance 1
-        for (org.flowable.task.service.Task task : taskService.createTaskQuery().processInstanceId(processInstance1.getId()).list()) {
+        for (org.flowable.task.api.Task task : taskService.createTaskQuery().processInstanceId(processInstance1.getId()).list()) {
             taskService.complete(task.getId());
         }
         
-        waitForHistoryJobExecutorToProcessAllJobs(5000, 100);
+        waitForHistoryJobExecutorToProcessAllJobs(7000, 100);
 
         assertEquals(2, historyService.createHistoricProcessInstanceQuery().orderByProcessInstanceId().asc().list().size());
         assertEquals(2, historyService.createHistoricProcessInstanceQuery().orderByProcessInstanceStartTime().asc().list().size());
@@ -378,7 +386,7 @@ public class HistoricProcessInstanceTest extends PluggableFlowableTestCase {
         List<HistoricProcessInstance> historicProcessInstances = historyService.createHistoricProcessInstanceQuery().orderByProcessInstanceEndTime().desc().list();
         // only check for existence and assume that the SQL processing has ordered the values correctly
         // see https://github.com/flowable/flowable-engine/issues/8
-        ArrayList processInstance = new ArrayList(2);
+        List<String> processInstance = new ArrayList<>(2);
         processInstance.add(historicProcessInstances.get(0).getId());
         processInstance.add(historicProcessInstances.get(1).getId());
         assertTrue(processInstance.contains(processInstance1.getId()));
@@ -386,13 +394,14 @@ public class HistoricProcessInstanceTest extends PluggableFlowableTestCase {
 
         // Verify again, with variables included (bug reported on that)
         historicProcessInstances = historyService.createHistoricProcessInstanceQuery().orderByProcessInstanceEndTime().desc().includeProcessVariables().list();
-        processInstance = new ArrayList(4);
+        processInstance = new ArrayList<>(4);
         processInstance.add(historicProcessInstances.get(0).getId());
         processInstance.add(historicProcessInstances.get(1).getId());
         assertTrue(processInstance.contains(processInstance1.getId()));
         assertTrue(processInstance.contains(processInstance2.getId()));
     }
 
+    @Test
     public void testInvalidSorting() {
         try {
             historyService.createHistoricProcessInstanceQuery().asc();
@@ -416,6 +425,7 @@ public class HistoricProcessInstanceTest extends PluggableFlowableTestCase {
         }
     }
 
+    @Test
     @Deployment(resources = { "org/flowable/engine/test/history/oneTaskProcess.bpmn20.xml" })
     // ACT-1098
     public void testDeleteReason() {
@@ -424,20 +434,21 @@ public class HistoricProcessInstanceTest extends PluggableFlowableTestCase {
             ProcessInstance pi = runtimeService.startProcessInstanceByKey("oneTaskProcess");
             runtimeService.deleteProcessInstance(pi.getId(), deleteReason);
             
-            waitForHistoryJobExecutorToProcessAllJobs(5000, 100);
+            waitForHistoryJobExecutorToProcessAllJobs(7000, 100);
             
             HistoricProcessInstance hpi = historyService.createHistoricProcessInstanceQuery().processInstanceId(pi.getId()).singleResult();
             assertEquals(deleteReason, hpi.getDeleteReason());
         }
     }
 
+    @Test
     @Deployment(resources = { "org/flowable/engine/test/history/oneTaskProcess.bpmn20.xml" })
     public void testHistoricIdentityLinksOnProcessInstance() {
         if (HistoryTestHelper.isHistoryLevelAtLeast(HistoryLevel.AUDIT, processEngineConfiguration)) {
             ProcessInstance pi = runtimeService.startProcessInstanceByKey("oneTaskProcess");
             runtimeService.addUserIdentityLink(pi.getId(), "kermit", "myType");
             
-            waitForHistoryJobExecutorToProcessAllJobs(5000, 100);
+            waitForHistoryJobExecutorToProcessAllJobs(7000, 100);
 
             // Check historic links
             List<HistoricIdentityLink> historicLinks = historyService.getHistoricIdentityLinksForProcessInstance(pi.getId());
@@ -452,14 +463,14 @@ public class HistoricProcessInstanceTest extends PluggableFlowableTestCase {
             taskService.complete(taskService.createTaskQuery().processInstanceId(pi.getId()).singleResult().getId());
             assertNull(runtimeService.createProcessInstanceQuery().processInstanceId(pi.getId()).singleResult());
             
-            waitForHistoryJobExecutorToProcessAllJobs(5000, 100);
+            waitForHistoryJobExecutorToProcessAllJobs(7000, 100);
 
             assertEquals(1, historyService.getHistoricIdentityLinksForProcessInstance(pi.getId()).size());
 
             // When process is deleted, identitylinks shouldn't exist anymore
             historyService.deleteHistoricProcessInstance(pi.getId());
             
-            waitForHistoryJobExecutorToProcessAllJobs(5000, 100);
+            waitForHistoryJobExecutorToProcessAllJobs(7000, 100);
             
             assertEquals(0, historyService.getHistoricIdentityLinksForProcessInstance(pi.getId()).size());
         }
@@ -468,6 +479,7 @@ public class HistoricProcessInstanceTest extends PluggableFlowableTestCase {
     /**
      * Validation for ACT-821
      */
+    @Test
     @Deployment(resources = { "org/flowable/engine/test/history/HistoricProcessInstanceTest.testDeleteHistoricProcessInstanceWithCallActivity.bpmn20.xml",
             "org/flowable/engine/test/history/HistoricProcessInstanceTest.testDeleteHistoricProcessInstanceWithCallActivity-subprocess.bpmn20.xml" })
     public void testDeleteHistoricProcessInstanceWithCallActivity() {
@@ -476,7 +488,7 @@ public class HistoricProcessInstanceTest extends PluggableFlowableTestCase {
 
             runtimeService.deleteProcessInstance(pi.getId(), "testing");
             
-            waitForHistoryJobExecutorToProcessAllJobs(5000, 100);
+            waitForHistoryJobExecutorToProcessAllJobs(7000, 100);
 
             // The parent and child process should be present in history
             assertEquals(2L, historyService.createHistoricProcessInstanceQuery().count());
@@ -484,12 +496,13 @@ public class HistoricProcessInstanceTest extends PluggableFlowableTestCase {
             // Deleting the parent process should cascade the child-process
             historyService.deleteHistoricProcessInstance(pi.getId());
             
-            waitForHistoryJobExecutorToProcessAllJobs(5000, 100);
+            waitForHistoryJobExecutorToProcessAllJobs(7000, 100);
             
             assertEquals(0L, historyService.createHistoricProcessInstanceQuery().count());
         }
     }
 
+    @Test
     @Deployment(resources = { "org/flowable/engine/test/history/oneTaskProcess.bpmn20.xml" })
     public void testHistoricProcessInstanceName() {
         String piName = "Customized Process Instance Name";
@@ -498,7 +511,7 @@ public class HistoricProcessInstanceTest extends PluggableFlowableTestCase {
         builder.name(piName);
         ProcessInstance processInstance1 = builder.start();
         
-        waitForHistoryJobExecutorToProcessAllJobs(5000, 100);
+        waitForHistoryJobExecutorToProcessAllJobs(7000, 100);
 
         HistoricProcessInstance historicProcessInstance = historyService.createHistoricProcessInstanceQuery().processInstanceId(processInstance1.getProcessInstanceId()).singleResult();
         assertEquals(piName, historicProcessInstance.getName());
@@ -508,6 +521,7 @@ public class HistoricProcessInstanceTest extends PluggableFlowableTestCase {
     /**
      * Validation for https://jira.codehaus.org/browse/ACT-2182
      */
+    @Test
     public void testNameAndTenantIdSetWhenFetchingVariables() {
 
         String tenantId = "testTenantId";
@@ -554,6 +568,26 @@ public class HistoricProcessInstanceTest extends PluggableFlowableTestCase {
 
         // cleanup
         deleteDeployment(deploymentId);
+    }
+
+    @Test
+    @Deployment(resources = { "org/flowable/engine/test/api/oneTaskProcess.bpmn20.xml" })
+    public void testQueryByInvalidCallbackId() {
+        String processInstanceId = runtimeService.startProcessInstanceByKey("oneTaskProcess", "now").getId();
+
+        if (HistoryTestHelper.isHistoryLevelAtLeast(HistoryLevel.AUDIT, processEngineConfiguration)) {
+            assertNull(historyService.createHistoricProcessInstanceQuery().processInstanceId(processInstanceId).processInstanceCallbackId("foo").singleResult());
+        }
+    }
+
+    @Test
+    @Deployment(resources = { "org/flowable/engine/test/api/oneTaskProcess.bpmn20.xml" })
+    public void testQueryByInvalidCallbackType() {
+        String processInstanceId = runtimeService.startProcessInstanceByKey("oneTaskProcess", "now").getId();
+
+        if (HistoryTestHelper.isHistoryLevelAtLeast(HistoryLevel.AUDIT, processEngineConfiguration)) {
+            assertNull(historyService.createHistoricProcessInstanceQuery().processInstanceId(processInstanceId).processInstanceCallbackType("foo").singleResult());
+        }
     }
 
 }
