@@ -12,28 +12,37 @@
  */
 package org.flowable.variable.service.impl.types;
 
+import org.flowable.variable.api.types.ValueFields;
+import org.flowable.variable.api.types.VariableType;
+
 /**
  * @author Joram Barrez
  */
 public class ShortType implements VariableType {
 
+    public static final String TYPE_NAME = "short";
+
     private static final long serialVersionUID = 1L;
 
+    @Override
     public String getTypeName() {
-        return "short";
+        return TYPE_NAME;
     }
 
+    @Override
     public boolean isCachable() {
         return true;
     }
 
+    @Override
     public Object getValue(ValueFields valueFields) {
         if (valueFields.getLongValue() != null) {
-            return new Short(valueFields.getLongValue().shortValue());
+            return Short.valueOf(valueFields.getLongValue().shortValue());
         }
         return null;
     }
 
+    @Override
     public void setValue(Object value, ValueFields valueFields) {
         if (value != null) {
             valueFields.setLongValue(((Short) value).longValue());
@@ -44,6 +53,7 @@ public class ShortType implements VariableType {
         }
     }
 
+    @Override
     public boolean isAbleToStore(Object value) {
         if (value == null) {
             return true;
