@@ -22,7 +22,7 @@ import org.apache.camel.ProducerTemplate;
 import org.apache.camel.Route;
 import org.apache.camel.builder.RouteBuilder;
 import org.flowable.engine.test.Deployment;
-import org.flowable.variable.service.history.HistoricVariableInstance;
+import org.flowable.variable.api.history.HistoricVariableInstance;
 import org.junit.BeforeClass;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.test.context.ContextConfiguration;
@@ -77,7 +77,7 @@ public class EmptyProcessTest extends SpringFlowableTestCase {
     public void testObjectAsVariable() throws Exception {
         CamelContext ctx = applicationContext.getBean(CamelContext.class);
         ProducerTemplate tpl = ctx.createProducerTemplate();
-        Object expectedObj = new Long(99);
+        Object expectedObj = Long.valueOf(99);
         Exchange exchange = ctx.getEndpoint("direct:startEmpty").createExchange();
         exchange.getIn().setBody(expectedObj);
         tpl.send("direct:startEmpty", exchange);
@@ -92,7 +92,7 @@ public class EmptyProcessTest extends SpringFlowableTestCase {
     public void testObjectAsStringVariable() throws Exception {
         CamelContext ctx = applicationContext.getBean(CamelContext.class);
         ProducerTemplate tpl = ctx.createProducerTemplate();
-        Object expectedObj = new Long(99);
+        Object expectedObj = Long.valueOf(99);
 
         Exchange exchange = ctx.getEndpoint("direct:startEmptyBodyAsString").createExchange();
         exchange.getIn().setBody(expectedObj);
