@@ -25,15 +25,15 @@ import java.util.Map;
 
 import org.activiti.engine.impl.identity.Authentication;
 import org.activiti.engine.impl.test.PluggableFlowableTestCase;
-import org.flowable.engine.common.api.FlowableIllegalArgumentException;
-import org.flowable.engine.common.impl.history.HistoryLevel;
-import org.flowable.engine.common.runtime.Clock;
+import org.flowable.common.engine.api.FlowableIllegalArgumentException;
+import org.flowable.common.engine.impl.history.HistoryLevel;
+import org.flowable.common.engine.impl.runtime.Clock;
 import org.flowable.engine.history.HistoricProcessInstance;
 import org.flowable.engine.repository.DeploymentProperties;
 import org.flowable.engine.runtime.ProcessInstance;
 import org.flowable.engine.runtime.ProcessInstanceBuilder;
 import org.flowable.engine.test.Deployment;
-import org.flowable.identitylink.service.history.HistoricIdentityLink;
+import org.flowable.identitylink.api.history.HistoricIdentityLink;
 
 /**
  * @author Tom Baeyens
@@ -71,7 +71,7 @@ public class HistoricProcessInstanceTest extends PluggableFlowableTestCase {
         assertNull(historicProcessInstance.getEndTime());
         assertNull(historicProcessInstance.getDurationInMillis());
 
-        List<org.flowable.task.service.Task> tasks = taskService.createTaskQuery().processInstanceId(processInstance.getId()).list();
+        List<org.flowable.task.api.Task> tasks = taskService.createTaskQuery().processInstanceId(processInstance.getId()).list();
 
         assertEquals(1, tasks.size());
 
@@ -89,7 +89,7 @@ public class HistoricProcessInstanceTest extends PluggableFlowableTestCase {
         assertEquals(processInstance.getProcessDefinitionId(), historicProcessInstance.getProcessDefinitionId());
         assertEquals(noon, historicProcessInstance.getStartTime());
         assertEquals(twentyFiveSecsAfterNoon, historicProcessInstance.getEndTime());
-        assertEquals(new Long(25 * 1000), historicProcessInstance.getDurationInMillis());
+        assertEquals(Long.valueOf(25 * 1000), historicProcessInstance.getDurationInMillis());
 
         assertEquals(0, historyService.createHistoricProcessInstanceQuery().unfinished().count());
         assertEquals(1, historyService.createHistoricProcessInstanceQuery().finished().count());
@@ -317,12 +317,12 @@ public class HistoricProcessInstanceTest extends PluggableFlowableTestCase {
         ProcessInstance processInstance2 = runtimeService.startProcessInstanceByKey("oneTaskProcess");
 
         // First complete process instance 2
-        for (org.flowable.task.service.Task task : taskService.createTaskQuery().processInstanceId(processInstance2.getId()).list()) {
+        for (org.flowable.task.api.Task task : taskService.createTaskQuery().processInstanceId(processInstance2.getId()).list()) {
             taskService.complete(task.getId());
         }
 
         // Then process instance 1
-        for (org.flowable.task.service.Task task : taskService.createTaskQuery().processInstanceId(processInstance1.getId()).list()) {
+        for (org.flowable.task.api.Task task : taskService.createTaskQuery().processInstanceId(processInstance1.getId()).list()) {
             taskService.complete(task.getId());
         }
 
